# netwatcher

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DOCS.md  README.md  main.py  pyproject.toml  tmp.py
docs/: cli.md
netwatcher/: __init__.py
remote_ip_geo_info/: __init__.py
src/netwatcher/: __main__.py  ip_api_client.py  ip_threat_assessment.py  logging_config.py  main.py  monitor.py  rconn.py  scan.py
src/netwatcher_cli/: ip_api_client.py  rconn.py  scan.py  ui.py
test/: conftest.py  test_ip_api_client.py  test_ip_threat_assessment.py  test_monitor.py  test_rconn.py  test_ui.py  utils.py
