[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "remote-ip-geo-info"
version = "0.1.0"
description = "CLI tool to show geolocation and business info for remote IPs, excluding local network connections."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.3"
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
    "pyright[nodejs]>=1.1.400",
    "ruff>=0.11.8"
]

[project.scripts]
geoip = "remote_ip_geo_info.main:app"

[tool.uv.build-backend]
module-root = ""
module-name = "remote_ip_geo_info"

[tool.pyright]
venvPath = "."
venv = ".venv"
