[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netwatcher"
version = "0.1.0"
dependencies = [
    "psutil",
    "requests",
    "typer",
    "httpx",
]
requires-python = ">=3.13"
authors = [
    {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
maintainers = [
  {name = "Paul Fischer", email = "paulfischerdev@gmail.com"}
]
description = "Monitor and track active network connections"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["network", "monitoring", "CLI", "security", "Typer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]

[tool.uv]
dev-dependencies = [
    "pre-commit>=4.2.0",
    "pyright[nodejs]>=1.1.400",
    "ruff>=0.11.8"
]

[project.urls]
Documentation = "https://github.com/pfischer1687/netwatcher/blob/main/DOCS.md"
Repository = "https://github.com/pfischer1687/netwatcher"
Issues = "https://github.com/pfischer1687/netwatcher/issues"
Changelog = "https://github.com/pfischer1687/netwatcher/blob/main/CHANGELOG.md"

[project.scripts]
nw = "netwatcher.main:app"

[tool.pyright]
venvPath = "."
venv = ".venv"
